--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,8 @@
 
     // Dev Containers Features に Git を追加
     "features": {
-      "ghcr.io/devcontainers/features/git:1": {}
+      "ghcr.io/devcontainers/features/git:1": {},
+      "ghcr.io/devcontainers/features/common-utils:1": {}
     },
 
     "postCreateCommand": "[ -f package.json ] && npm install || echo 'skip npm install'",
