chore: add placeholder build script

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "background.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint . --ext .js,.ts"
+    "lint": "eslint . --ext .js,.ts",
+    "build": "echo \"No build step configured yet\""
   },
   "keywords": [],
   "author": "",
