--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,26 +1,25 @@
 {
-    "name": "PCL Extension (Node)",
-    "image": "node:18-bullseye-slim",
-    "remoteUser": "node",
-    "updateRemoteUserUID": false,
-    "workspaceFolder": "/workspace",
-    "workspaceMount": "source=${localWorkspaceFolder},target=/workspace,type=bind",
+  "name": "PCL Navigator (Python)",
+  "image": "mcr.microsoft.com/devcontainers/python:3.11-bullseye",
 
-    // Dev Containers Features に Git を追加
-    "features": {
-      "ghcr.io/devcontainers/features/git:1": {},
-      "ghcr.io/devcontainers/features/common-utils:1": {}
+  "features": {
+    "ghcr.io/devcontainers/features/common-utils": {
+      "installZsh": false,
+      "username": "vscode",
+      "userUid": "automatic",
+      "userGid": "automatic"
     },
+    "ghcr.io/devcontainers/features/git": {}
+  },
 
-    "postCreateCommand": "[ -f package.json ] && npm install || echo 'skip npm install'",
+  "postCreateCommand": "pip install --user -r requirements.txt",
 
-    "customizations": {
-      "vscode": {
-        "extensions": [
-          "dbaeumer.vscode-eslint",
-          "esbenp.prettier-vscode"
-        ]
-      }
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "ms-python.python",
+        "ms-python.vscode-pylance"
+      ]
     }
   }
-  
+}
