--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,10 +1,14 @@
+# .github/workflows/ci.yaml
+
 name: CI
 
 on:
   push:
     branches:
       - main
-      - feat/**
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
@@ -12,21 +16,24 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - name: Setup Python
+        uses: actions/setup-python@v5
         with:
-          node-version: '18'
+          python-version: '3.11'
 
       - name: Install dependencies
-        run: npm ci
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-      - name: Lint
-        run: npm run lint
+      # - name: Lint with flake8
+      #   run: |
+      #     pip install flake8
+      #     flake8 .
 
-      - name: Build
-        run: npm run build
-
-      #- name: Run tests
-      #  run: npm test
+      # - name: Run tests with pytest
+      #   run: |
+      #     pip install pytest
+      #     pytest
