--- a/.github/workflows/immune.yaml
+++ b/.github/workflows/immune.yaml
@@ -1,6 +1,7 @@
+---
 name: Immune Gate
 on: pull_request
 jobs:
   gate:
-    uses: mikieto/jibun-os/.github/workflows/immune_gate.yml@main
+    uses: mikieto/jibun-os/.github/workflows/immune_gate.yaml@main
     secrets: inherit
